# product-agent-cli

./: .env.example  .gitignore  README.md  pyproject.toml
src/product_agent_cli/: main.py
tests/: test_main.py  test_spec_generation.py
